--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,19 @@ behave-py3==1.2.5.post2014122202
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
+click==7.1.2
 colorama==0.4.3
 contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
+Flask==1.1.2
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
 lockfile==0.12.2
+MarkupSafe==1.1.1
 msgpack==0.6.2
 numpy==1.18.4
 packaging==20.3
@@ -27,3 +32,4 @@ six==1.14.0
 soupsieve==2.0.1
 urllib3==1.25.8
 webencodings==0.5.1
+Werkzeug==1.0.1
